# lemin

./: .gitignore  CMakeLists.txt  LROOM  Makefile  README.md  asd.c  author  b1.txt  b2.txt  b3.txt  b4.txt  b5.txt  bo.txt  bo1.txt  bo2.txt  calculate.c  cross_group.c  direct_edges.c  error.c  etalon.c  find_or_insert.c  functions_free.c  get_ant_step.c  get_emplace_vector.c  init_free_vector.c  init_node.c  init_tracker_helper.c  init_ways.c  insert_sort_vector.c  kek  lem-in  lem_in  lem_in.h  main.c  parse_map.c  push_pop_vector.c  reset_states.c  set_edges.c  solve.c  test_print.c  (+6 more)
etalon.c.dSYM/Contents/: Info.plist
etalon.c.dSYM/Contents/Resources/DWARF/: etalon.c
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
lem-in_maps/ant_size_trace/: char_bit_trace
lem_in.dSYM/Contents/Resources/DWARF/: lem_in
libft/: Makefile
libft/inc/: ft_printf.h  get_next_line.h  libft.h  vector.h
libft/src/: ft_atoi.c  ft_bzero.c  ft_error.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isgraph.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_isxdigit.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  (+30 more)
libft/src/ft_printf/: ad_0_after0x.c  ad_0_aftersign.c  ad_0_aftersps.c  ad_fld_end.c  ad_fld_strt.c  analyze_format.c  count_af_dot.c  find_format.c  format_c.c  format_d.c  format_f.c  format_o.c  format_p.c  format_processing.c  format_s.c  format_u.c  format_x.c  format_xx.c  ft_big_itoa_base.c  ft_dtoa.c  ft_itoa_base.c  ft_itoa_long.c  ft_ldtoa.c  ft_printf.c  ft_strjoin_free.c  ft_strjoin_free2.c  ft_strrev.c  ft_strsub_free.c  ft_unsig_itoa_long.c  get_mods.c  help_analyze_format.c  help_func_for_f.c  inscrem_s.c  locate_chr_index.c  overlay_flags.c  prec_ftoi.c  strlen.c  work_flags_with_d.c  work_flags_with_f.c  work_flags_with_o.c  (+6 more)
libft/src/ft_vector/: get_emplace_vector.c  init_free_vector.c  insert_sort_vector.c  push_pop_vector.c
maps/: kek.txt  kek1.txt  no_possible.map  subject-5.map  txt.txt
maps/supermaps/: 1  10  100  103  104  105  106  107  109  110  111  115  116  120  121  124  125  126  127  128  129  130  132  135  137  138  139  14  140  141  142  143  144  147  148  149  15  150  151  153  (+631 more)
srcs/: addapt_vector.c  addapt_vector2.c  calculate.c  cross_group.c  error.c  find_or_insert.c  functions_free.c  get_ant_step.c  get_emplace_vector.c  init_free_vector.c  init_node.c  init_ways.c  insert_sort_vector.c  is_cross.c  main.c  parse_map.c  print_func.c  push_pop_vector.c  queue.c  solve.c  sort_vector.c  validation.c  validation2.c  validation3.c  work_with_way.c  work_with_way2.c  write_ants_path.c
supermaps/: 1000  101  102  108  11  112  113  114  117  118  119  12  122  123  13  131  133  134  136  145  146  152  156  157  159  161  169  171  172  173  176  178  184  189  192  197  204  206  209  211  (+289 more)
test/: b.txt  b2.txt  b3.txt  b4.txt  b5.txt  b6.txt  bo1.txt  bo2.txt  bo3.txt  bo4.txt  bo5.txt  bo6.txt  bo7.txt  bo8.txt  bo9.txt  f1.txt  f2.txt  ft.txt  ft1.txt  fth1.txt  lem-in_gen  p1.txt  p2.txt  p3.txt  p4.txt  p5.txt  p6.txt  solve_test.c  sort_find_test.c  test_write_link.c  txt.txt  vector_test.c
